--- a/brain/pom.xml
+++ b/brain/pom.xml
@@ -23,7 +23,12 @@
 		<mockito.version>1.10.19</mockito.version>
 		<!-- Version de java -->
 		<java.version>1.8</java.version>
-		<sonar.maven.plugin.version>5.1</sonar.maven.plugin.version>
+		<sonar.maven.plugin.version>3.0.1</sonar.maven.plugin.version>
+		<!-- Sonar properties -->
+		<sonar.host.url>http://localhost:9000/</sonar.host.url>
+		<sonar.exclusions>org/binarytherapy/generated/**/*,
+			**/GuiceBindComposer.java</sonar.exclusions>
+		<sonar.dynamic>reuseReports</sonar.dynamic>
 	</properties>
 
 	<build>
