--- a/brain/pom.xml
+++ b/brain/pom.xml
@@ -208,5 +208,12 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.1.1</version>
 		</dependency>
+
+		<!-- Freemarker Dependency -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.23</version>
+		</dependency>
 	</dependencies>
 </project>
