--- a/brain/pom.xml
+++ b/brain/pom.xml
@@ -270,5 +270,10 @@
 			<scope>provided</scope>
 			<classifier>sources</classifier>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 	</dependencies>
 </project>
